@@ -1,5 +1,9 @@
 2007-10-16  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/flow.R (graph.mincut)
+	* interfaces/R/src/rinterface.c.in (R_igraph_mincut) : minimum cut
+	calculation added
+
 	* interfaces/R/igraph/R/foreign.R (read.graph.dimacs) : updated to 
 	handle 'edge' problems
 	* interfaces/R/src/rinterface.c.in (R_igraph_read_graph_dimacs) :
